syntax = "proto3";

package greet;

option java_package= "com.proto.greet";

option java_multiple_files= true ;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse{
  string result=1;
}

message GreetingManyTimesRequest{
  Greeting greeting=1;
}

message GreetingManyTimesResponse{
  string result=1;
}

message LongGreetRequest{
  Greeting greeting=1;
}

message LongGreetResponse{
  string result=1;
}

service GreetService{
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse){};

  //server streaming
  rpc GreetingManyTimes(GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse){};

  //client streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};
}
